# rasta

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
data/malta-laws/: MANIFEST.md
docs/: api-reference.md  materials.md  sdk-guide.md
examples/: async_batch.py  floor_plan.py  quickstart.py
rasta/: __init__.py  api.py  floorplan_detect.py  scene_converter_legacy.py  sdk.py  server.py  texture_extract.py  texture_identify.py  texture_to_planner.py
rasta/geometry/: __init__.py  api.py  building_pipeline.py  buildings_lite.py  cache.py  facade_classifier.py  malta_gis.py  mapillary_client.py  osm_buildings.py
scripts/: install-geometry-deps.sh  prefetch-cities.py
tests/: test_materials.py  test_sdk.py
